; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_reg.c_Set_ChanIndep_RfData_al7230_24.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/winbond/extr_reg.c_Set_ChanIndep_RfData_al7230_24.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hw_data = type { i32* }

@al7230_rf_data_24 = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Set_ChanIndep_RfData_al7230_24(%struct.hw_data* %0, i32* %1, i8 signext %2) #0 {
  %4 = alloca %struct.hw_data*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  store %struct.hw_data* %0, %struct.hw_data** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8 %2, i8* %6, align 1
  store i8 0, i8* %7, align 1
  br label %8

8:                                                ; preds = %37, %3
  %9 = load i8, i8* %7, align 1
  %10 = sext i8 %9 to i32
  %11 = load i8, i8* %6, align 1
  %12 = sext i8 %11 to i32
  %13 = icmp slt i32 %10, %12
  br i1 %13, label %14, label %40

14:                                               ; preds = %8
  %15 = load i32*, i32** @al7230_rf_data_24, align 8
  %16 = load i8, i8* %7, align 1
  %17 = sext i8 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.hw_data*, %struct.hw_data** %4, align 8
  %21 = getelementptr inbounds %struct.hw_data, %struct.hw_data* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = load i8, i8* %7, align 1
  %24 = sext i8 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  store i32 %19, i32* %25, align 4
  %26 = load i32*, i32** @al7230_rf_data_24, align 8
  %27 = load i8, i8* %7, align 1
  %28 = sext i8 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = load i32, i32* %29, align 4
  %31 = and i32 %30, 16777215
  %32 = or i32 -1744830464, %31
  %33 = load i32*, i32** %5, align 8
  %34 = load i8, i8* %7, align 1
  %35 = sext i8 %34 to i64
  %36 = getelementptr inbounds i32, i32* %33, i64 %35
  store i32 %32, i32* %36, align 4
  br label %37

37:                                               ; preds = %14
  %38 = load i8, i8* %7, align 1
  %39 = add i8 %38, 1
  store i8 %39, i8* %7, align 1
  br label %8

40:                                               ; preds = %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
